implement role-based authorization with jwt and fix JWT tokey key inconsistency